--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,10 @@ newsletter:
 collections:
   books:
     output: true
+  news:
+    defaults:
+      layout: post
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
