--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,12 @@ impressum_path: # set to path to include impressum link in the footer, use the s
 back_to_top: true # set to false to disable the back to top button
 
 # -----------------------------------------------------------------------------
+# CV
+# -----------------------------------------------------------------------------
+
+cv_pdf: CV_apr_9.pdf
+
+# -----------------------------------------------------------------------------
 # Theme
 # -----------------------------------------------------------------------------
 
